--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^1.0.4
+  image_picker: ^0.8.9
   get: ^4.6.6
   fluttertoast: ^8.2.2
   simple_animations: ^5.0.2
@@ -46,6 +46,11 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_local_notifications: ^15.1.1
   shared_preferences: ^2.2.1
+  tflite_flutter: ^0.10.3
+  # flutter_tflite: ^1.0.1
+  # image: ^4.1.3
+  tflite_flutter_helper_plus: ^0.0.2
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +77,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
+    - assets/labels.txt
+    - assets/model_resnet.tflite
+    - assets/model_unquant.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
